--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 NO PAIN! NO GRAIN!
             </h1>
             <h2>
-                 We at Stud Muffins take immense pride in our grains and in our grains
+                 We at Stud Muffins take immense pride in our grains, and in our gains,
                 by using only the fittest and finest ingredients for our fresh batches of
                 Muffins and Pastries!</h2>
             <h2> 
